[package]
name = "ultrasonic-no-std"
version = "0.1.0"
authors = ["Ramses <ram.hdzven@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.11.0", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.16.0", features = ["esp32s3", "embassy", "embassy-executor", "embassy-executor-thread", "embassy-futures", "embassy-integrated-timers", "embassy-sync", "embedded-hal-async", "embedded-io", "embedded-io-async", "embassy-time-timg0"] }
esp-println = { version = "0.9.0", features = ["esp32s3", "log"] }
log = { version = "0.4.20" }
esp-alloc = { version = "0.3.0" }
# embedded-svc = { version = "0.26.1", default-features = false, features = [] }
# embedded-io = "0.6.1"
esp-wifi = { version = "0.4.0", features = ["esp32s3", "phy-enable-usb", "utils", "wifi", "embassy-net", "async"] }
embassy-executor = { version = "0.5.0", features = ["executor-thread", "integrated-timers"] }
embassy-time = "0.3.0"
embassy-net = { version = "0.4.0", features = ["dhcpv4", "dns", "medium-ip", "medium-ethernet", "tcp", "udp"] }
embassy-sync = "0.5.0"
embassy-futures = "0.1.1"
embedded-nal-async = "0.7.1"
rust-mqtt = { version = "0.3.0", default-features = false }

[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = true
opt-level = 's'
overflow-checks = false
panic = "abort"
strip = true  # Automatically strip symbols from the binary.
